--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -12,6 +12,6 @@
  *= require font-awesome
  *= require animate/animate.css
  *= require checkbox/checkbox.css
- *= require switchery
+ *= require iziToast
  *= require style
  */
