--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,8 +1,8 @@
 <div class="footer">
     <div class="pull-right">
-        Example text
+      2017-B030
     </div>
     <div>
-        <strong>Copyright</strong> Example Company &copy; 2014-2017
+        <strong>Copyright</strong> IPN &copy; 2018
     </div>
 </div>
