--- a/app/views/layouts/empty.html.erb
+++ b/app/views/layouts/empty.html.erb
@@ -22,5 +22,23 @@
 
   <%= yield :script %>
 
+  <script>
+      <% if flash[:notice] %>
+        iziToast.success({
+            title: 'Éxito',
+            message: '<%= flash[:notice].html_safe unless flash[:notice].blank? %>',
+            position: 'topRight'
+        });
+      <% end %>
+
+      <% if flash.now[:error] %>
+        iziToast.error({
+            title: 'Error',
+            message: '<%= flash[:error].html_safe unless flash[:error].blank? %>',
+            position: 'topRight'
+        });
+      <% end %>
+  </script>
+
 </body>
 </html>
