--- a/app/views/registro/new.html.erb
+++ b/app/views/registro/new.html.erb
@@ -96,12 +96,12 @@
             </div>
             <%= f.submit "Enviar", class: "btn btn-primary btn-block" %>
           <% end %>
-
+          ¿Ya tienes una cuenta? <%= link_to "Inicia Sesión", login_path %>
         </div>
         <div class="ibox-footer">
-          <span class="pull-right">
+          <!-- <span class="pull-right">
             ¿Ya tienes una cuenta? <%= link_to "Inicia Sesión", login_path %>
-          </span>
+          </span> -->
           Los campos marcados con (<span class="text-danger">*</span>) son obligatorios.
         </div>
       </div>
