--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,8 +1,8 @@
-<div class="footer">
+<div class="footer fixed">
     <div class="pull-right">
       2017-B030
     </div>
     <div>
-        <strong>Copyright</strong> IPN &copy; 2018
+        <strong>IPN</strong> &copy; 2018
     </div>
 </div>
