--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -5,27 +5,25 @@
                 <div class="dropdown profile-element">
                     <a data-toggle="dropdown" class="dropdown-toggle" href="#">
                         <span class="clear">
-                            <span class="block m-t-xs">
-                                <strong class="font-bold">Example user</strong>
-                            </span> <span class="text-muted text-xs block">Example menu <b class="caret"></b></span>
+                            <h3 class="block m-t-xs">
+                                <i class="fa fa-car"></i> DRIVIFY
+                            </h3>
+                            <span class="block text-muted m-t-xs">
+                                <strong class="font-bold"><%= "#{@current_user.nombre} #{@current_user.ap_paterno}"%></strong>
+                            </span>
                         </span>
                     </a>
-                    <ul class="dropdown-menu animated fadeInRight m-t-xs">
+                    <!--<ul class="dropdown-menu animated fadeInRight m-t-xs">
                         <li><a href="#">Logout</a></li>
-                    </ul>
+                    </ul>-->
                 </div>
                 <div class="logo-element">
-                    IN+
+                  <i class="fa fa-car"></i>
                 </div>
             </li>
-            <li class="<%= 'active' if current_page?('/') %>">
-                <%= link_to "/" do %>
+            <li class="<%= 'active' if (current_page?(home_path) || current_page?(root_path)) %>">
+                <%= link_to home_path do %>
                 <i class="fa fa-laptop"></i> <span class="nav-label">Main page</span>
-                <% end %>
-            </li>
-            <li class="<%= 'active' if current_page?('/home/minor') %>">
-                <%= link_to "/home/minor" do %>
-                <i class="fa fa-desktop"></i> <span class="nav-label">Minor page</span>
                 <% end %>
             </li>
         </ul>
