--- a/app/views/registro/new.html.erb
+++ b/app/views/registro/new.html.erb
@@ -88,11 +88,11 @@
             </div>
             <div class="form-group">
               <label>Contraseña<span class="text-danger">*</span></label>
-              <%= f.password_field :password, class:"form-control", required:"true" %>
+              <%= f.password_field :password, class:"form-control", required:"true", minlength: "8" %>
             </div>
             <div class="form-group">
               <label>Confirmar Contraseña<span class="text-danger">*</span></label>
-              <%= f.password_field :password_confirmation, class:"form-control", required:"true" %>
+              <%= f.password_field :password_confirmation, class:"form-control", required:"true", minlength: "8" %>
             </div>
             <%= recaptcha_tags %>
             <br>
