--- a/app/views/session/new.html.erb
+++ b/app/views/session/new.html.erb
@@ -4,58 +4,36 @@
 
 <% content_for :css do %>
   <style>
-    html,body,.container-fluid,.row,[class*="col-"]{
-      height: 100%;
-    }
     .backstretch{
       opacity: 0.65;
     }
     .logo-drivify a{
       font-weight: 600;
-      font-size: 70px;
+      font-size: 2em;
       color: #FFFFFF;
     }
-    .caption {
-      position: absolute;
-      left: 0;
-      top: 50%;
-      width: 100%;
-      text-align: center;
-      vertical-align: middle;
-      color: #000;
-    }
-    .caption span.border {
+    .border {
       background-color: #111;
       color: #fff;
       padding: 18px;
-      font-size: 25px;
-      letter-spacing: 10px;
-    }
-    #container-col{
-      padding: 100px;
-      display: flex;
-      align-items: center;
-    }
-    .gray-bg{
-      height: 100%;
-      width: 100%;
+      font-size: 2em;
+      letter-spacing: 1em;
+      text-align: center;
     }
   </style>
 <% end %>
 
 <div class="container-fluid">
-  <div class="row">
-    <div class="col-sm-7">
-      <h1 class="logo-drivify text-white">
-        <%= link_to root_path do %>
-          <i class="fa fa-car"></i> DRIVIFY
-        <% end %>
-      </h1>
-      <div class="caption">
-        <span class="border">INICIO DE SESIÓN</span><br><br>
+  <div class="row" style="margin-top: 2em;">
+    <div class="col-md-6 col-md-offset-3">
+      <div class="border">
+        <p>
+          <i class="fa fa-car"></i>DRIVIFY
+        </p>
+        <p>
+          <span>INICIO DE SESIÓN</span>
+        </p>
       </div>
-    </div>
-    <div id="container-col" class="col-sm-5">
       <div class="ibox float-e-margins" style="width: 100%;">
         <div class="ibox-content">
           <%= form_for :login, html: {role: "form"} do |f| %>
@@ -72,9 +50,6 @@
           ¿No tienes una cuenta? <%= link_to "Regístrate", registro_path %>
         </div>
         <div class="ibox-footer">
-          <!-- <span class="pull-right">
-            ¿No tienes una cuenta? <%= link_to "Regístrate", registro_path %>
-          </span> -->
           Los campos marcados con (<span class="text-danger">*</span>) son obligatorios.
         </div>
       </div>
