--- a/app/views/registro/new.html.erb
+++ b/app/views/registro/new.html.erb
@@ -23,7 +23,7 @@
   </style>
 <% end %>
 
-<div class="container-fluid">
+<div class="container-fluid animated fadeInDown">
   <div class="row" style="margin-top: 2em;">
     <div class="col-md-6 col-md-offset-3">
       <div class="border">
@@ -92,7 +92,7 @@
     $(function(){
 
         // $.backstretch("https://images.pexels.com/photos/13861/IMG_3496bfree.jpg");
-        $.backstretch("https://images.pexels.com/photos/7674/pexels-photo.jpg");
+        $.backstretch("<%= asset_path "car-background.jpg" %>");
 
         $('#user_curp').on('keyup',function(){
             $(this).val($(this).val().toUpperCase());
