--- a/app/views/session/new.html.erb
+++ b/app/views/session/new.html.erb
@@ -4,9 +4,9 @@
 
 <% content_for :css do %>
   <style>
-    .backstretch{
-      opacity: 0.65;
-    }
+    /*.backstretch{*/
+      /*opacity: 0.65;*/
+    /*}*/
     .logo-drivify a{
       font-weight: 600;
       font-size: 2em;
