--- a/app/views/user_admin/index.html.erb
+++ b/app/views/user_admin/index.html.erb
@@ -13,39 +13,43 @@
           </div>
           <div class="row">
             <div class="col-md-12">
-              <table class="table table-striped">
-                <thead>
-                <tr>
-                  <th>Nombre</th>
-                  <th>CURP</th>
-                  <th class="text-center">Correo Electrónico</th>
-                  <th class="text-center">Fecha de Nacimiento</th>
-                  <th>Rol</th>
-                  <th class="text-center">Evaluaciones Solicitadas</th>
-                  <th class="text-center">Acción</th>
-                </tr>
-                </thead>
-                <tbody>
-                <% @users.each do |user| %>
-                  <tr class="fila" data-nombre="<%= user.nombre + " " + user.ap_paterno + " " + user.ap_materno %>" data-curp="<%= user.curp %>" data-mail="<%= user.email %>" data-rol="<%= user.role.descripcion %>">
-                    <td><%= user.nombre + " " + user.ap_paterno + " " + user.ap_materno %></td>
-                    <td><%= user.curp %></td>
-                    <td class="text-center"><%= user.email %></td>
-                    <td class="text-center"><%= user.fecha_nacimiento.strftime('%d/%m/%Y') %></td>
-                    <td><%= user.role.nombre_descripcion %></td>
-                    <td class="text-center"><span class="badge badge-info"><%= user.requested_quizzes.count %></span></td>
-                    <td class="text-center">
-                      <%= link_to edit_user_path(user.id) do %>
-                        <span class="btn btn-warning" data-toggle="tooltip" data-placement="top" title="Editar Usuario"><i class="fa fa-pencil"></i></span>
-                      <% end %>
-                      <%= link_to destroy_user_path(user.id), method: :delete do %>
-                        <span class="btn btn-danger" data-toggle="tooltip" data-placement="top" title="Eliminar Usuario"><i class="fa fa-trash"></i></span>
-                      <% end %>
-                    </td>
+              <div class="table-responsive">
+                <table class="table table-striped">
+                  <thead>
+                  <tr>
+                    <th>Nombre</th>
+                    <th>CURP</th>
+                    <th class="text-center">Correo Electrónico</th>
+                    <th class="text-center">Fecha de Nacimiento</th>
+                    <th>Rol</th>
+                    <th class="text-center">Evaluaciones Solicitadas</th>
+                    <th class="text-center">Acción</th>
                   </tr>
-                <% end %>
-                </tbody>
-              </table>
+                  </thead>
+                  <tbody>
+                  <% @users.each do |user| %>
+                    <tr class="fila" data-nombre="<%= user.nombre + " " + user.ap_paterno + " " + user.ap_materno %>" data-curp="<%= user.curp %>" data-mail="<%= user.email %>" data-rol="<%= user.role.descripcion %>">
+                      <td><%= user.nombre + " " + user.ap_paterno + " " + user.ap_materno %></td>
+                      <td><%= user.curp %></td>
+                      <td class="text-center"><%= user.email %></td>
+                      <td class="text-center"><%= user.fecha_nacimiento.strftime('%d/%m/%Y') %></td>
+                      <td><%= user.role.nombre_descripcion %></td>
+                      <td class="text-center"><span class="badge badge-info"><%= user.requested_quizzes.count %></span></td>
+                      <td class="text-center">
+                        <% if user.role.id != 1 %>
+                          <%= link_to edit_user_path(user.id) do %>
+                            <span class="btn btn-sm btn-warning" data-toggle="tooltip" data-placement="top" title="Editar Usuario"><i class="fa fa-pencil"></i></span>
+                          <% end %>
+                          <%= link_to destroy_user_path(user.id), method: :delete do %>
+                            <span class="btn btn-sm btn-danger" data-toggle="tooltip" data-placement="top" title="Eliminar Usuario"><i class="fa fa-trash"></i></span>
+                          <% end %>
+                      <%end %>
+                      </td>
+                    </tr>
+                  <% end %>
+                  </tbody>
+                </table>
+              </div>
               <%= link_to new_user_path do %>
                 <span id="nuevo_usuario" class="btn btn-primary"><i class="fa fa-user-plus"></i> Agregar Usuario</span>
               <% end %>
