--- a/app/assets/stylesheets/base/custom.scss
+++ b/app/assets/stylesheets/base/custom.scss
@@ -8,3 +8,7 @@
 .table > thead > tr > th, .table > tbody > tr > th, .table > tfoot > tr > th, .table > thead > tr > td, .table > tbody > tr > td, .table > tfoot > tr > td{
   vertical-align: middle;
 }
+
+body{
+  font-family: "Roboto", "Helvetica Neue", Helvetica, Arial, sans-serif;
+}
