--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -24,7 +24,7 @@
 
             <li class="<%= 'active' if (current_page?(home_path) || current_page?(root_path)) %>">
                 <%= link_to home_path do %>
-                <i class="fa fa-laptop"></i> <span class="nav-label">Main page</span>
+                <i class="fa fa-home"></i> <span class="nav-label">Inicio</span>
                 <% end %>
             </li>
 
