--- a/app/views/user_admin/index.html.erb
+++ b/app/views/user_admin/index.html.erb
@@ -7,21 +7,24 @@
         </div>
         <div class="ibox-content">
           <div class="row">
-            <div class="col-md-3 col-md-offset-9">
-              <input id="busqueda" placeholder="Buscar..." class="input-sm form-control" type="text">
+            <div class="col-md-12 p-sm">
+              <%= link_to new_user_path do %>
+                <span id="nuevo_usuario" class="btn btn-primary"><i class="fa fa-user-plus"></i> Agregar Usuario</span>
+              <% end %>
             </div>
           </div>
           <div class="row">
             <div class="col-md-12">
               <div class="table-responsive">
-                <table class="table table-striped">
+                <table class="table table-striped table-bordered">
                   <thead>
                   <tr>
-                    <th>Nombre</th>
-                    <th>CURP</th>
+                    <th class="text-center">Nombre</th>
+                    <th class="text-center">CURP</th>
                     <th class="text-center">Correo Electrónico</th>
                     <th class="text-center">Fecha de Nacimiento</th>
-                    <th>Rol</th>
+                    <th class="text-center">Rol</th>
+                    <th class="text-center">Fecha de Creación</th>
                     <th class="text-center">Evaluaciones Solicitadas</th>
                     <th class="text-center">Acción</th>
                   </tr>
@@ -29,18 +32,19 @@
                   <tbody>
                   <% @users.each do |user| %>
                     <tr class="fila" data-nombre="<%= user.nombre + " " + user.ap_paterno + " " + user.ap_materno %>" data-curp="<%= user.curp %>" data-mail="<%= user.email %>" data-rol="<%= user.role.descripcion %>">
-                      <td><%= user.nombre + " " + user.ap_paterno + " " + user.ap_materno %></td>
+                      <td><%= user.nombre_completo %></td>
                       <td><%= user.curp %></td>
-                      <td class="text-center"><%= user.email %></td>
+                      <td><%= user.email %></td>
                       <td class="text-center"><%= user.fecha_nacimiento.strftime('%d/%m/%Y') %></td>
                       <td><%= user.role.nombre_descripcion %></td>
+                      <td class="text-center"><%= user.created_at.strftime('%d/%m/%Y') %> <small><%= user.created_at.strftime('%I:%M:%S %p') %></small></td>
                       <td class="text-center"><span class="badge badge-info"><%= user.requested_quizzes.count %></span></td>
                       <td class="text-center">
                         <% if user.role.id != 1 %>
                           <%= link_to edit_user_path(user.id) do %>
                             <span class="btn btn-sm btn-warning" data-toggle="tooltip" data-placement="top" title="Editar Usuario"><i class="fa fa-pencil"></i></span>
                           <% end %>
-                          <%= link_to destroy_user_path(user.id), method: :delete do %>
+                          <%= link_to destroy_user_path(user.id), method: :delete, data:{confirm: "Esta acción es irreversible, ¿Desea continuar?"} do %>
                             <span class="btn btn-sm btn-danger" data-toggle="tooltip" data-placement="top" title="Eliminar Usuario"><i class="fa fa-trash"></i></span>
                           <% end %>
                       <%end %>
@@ -50,9 +54,6 @@
                   </tbody>
                 </table>
               </div>
-              <%= link_to new_user_path do %>
-                <span id="nuevo_usuario" class="btn btn-primary"><i class="fa fa-user-plus"></i> Agregar Usuario</span>
-              <% end %>
             </div>
           </div>
         </div>
@@ -65,25 +66,34 @@
   <script>
 
     $(function () {
-        // Limpia el campo de busqueda y agrega el event handler al mismo
-        $('#busqueda').val('').on('keyup',function () {
-            if($.trim($(this).val()).length > 0){
-                const filtro = $(this).val().toUpperCase();
-                $('.fila').each(function (index, element) {
-                    const nombre = $(element).data('nombre').toUpperCase();
-                    const curp = $(element).data('curp').toUpperCase();
-                    const mail = $(element).data('mail').toUpperCase();
-                    const rol = $(element).data('rol').toUpperCase();
-                    if(nombre.indexOf(filtro) > -1 || curp.indexOf(filtro) > -1 || mail.indexOf(filtro) > -1 || rol.indexOf(filtro) > -1){
-                        $(element).show();
-                    }
-                    else{
-                        $(element).hide();
-                    }
-                });
-            }else{
-                $('.fila').show();
-            }
+
+        $('.table').DataTable({
+            language:{
+                "sProcessing":     "Procesando...",
+                "sLengthMenu":     "Mostrar _MENU_ registros",
+                "sZeroRecords":    "No se encontraron resultados",
+                "sEmptyTable":     "Ningún dato disponible en esta tabla",
+                "sInfo":           "Mostrando registros del _START_ al _END_ de un total de _TOTAL_ registros",
+                "sInfoEmpty":      "Mostrando registros del 0 al 0 de un total de 0 registros",
+                "sInfoFiltered":   "(filtrado de un total de _MAX_ registros)",
+                "sInfoPostFix":    "",
+                "sSearch":         "Buscar:",
+                "sUrl":            "",
+                "sInfoThousands":  ",",
+                "sLoadingRecords": "Cargando...",
+                "oPaginate": {
+                    "sFirst":    "Primero",
+                    "sLast":     "Último",
+                    "sNext":     "Siguiente",
+                    "sPrevious": "Anterior"
+                },
+                "oAria": {
+                    "sSortAscending":  ": Activar para ordenar la columna de manera ascendente",
+                    "sSortDescending": ": Activar para ordenar la columna de manera descendente"
+                }
+            },
+            pageLength: 10,
+            responsive: true
         });
     });
 
