--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -30,9 +30,24 @@
 
             <%# Modulo de administracion de usuarios para administradores %>
             <% if @current_user.role.id == 1 %>
-              <li class="<%= 'active' if (current_page?(user_admin_path) || current_page?(new_user_path)) %>">
+              <li class="<%= 'active' if params[:admin_users_scope].eql? true %>">
                 <%= link_to user_admin_path do %>
                   <i class="fa fa-users"></i> <span class="nav-label">Usuarios</span>
+                <% end %>
+              </li>
+              <li class="<%= 'active' if params[:admin_quizzes_type_scope].eql? true %>">
+                <%= link_to quiz_type_admin_path do %>
+                  <i class="fa fa-list-ol"></i> <span class="nav-label">Tipos de Evaluaciones Teóricas</span>
+                <% end %>
+              </li>
+              <li class="<%= 'active' if params[:admin_questions_scope].eql? true %>">
+                <%= link_to question_admin_path do %>
+                  <i class="fa fa-question"></i> <span class="nav-label">Preguntas</span>
+                <% end %>
+              </li>
+              <li class="<%= 'active' if params[:admin_answers_scope].eql? true %>">
+                <%= link_to answer_admin_path do %>
+                  <i class="fa fa-check"></i> <span class="nav-label">Respuestas</span>
                 <% end %>
               </li>
             <% end %>
