--- a/app/views/user_admin/index.html.erb
+++ b/app/views/user_admin/index.html.erb
@@ -9,7 +9,7 @@
           <div class="row">
             <div class="col-md-12 p-sm">
               <%= link_to new_user_path do %>
-                <span id="nuevo_usuario" class="btn btn-primary"><i class="fa fa-user-plus"></i> Agregar Usuario</span>
+                <span class="btn btn-primary"><i class="fa fa-user-plus"></i> Agregar Usuario</span>
               <% end %>
             </div>
           </div>
@@ -18,37 +18,42 @@
               <div class="table-responsive">
                 <table class="table table-striped table-bordered">
                   <thead>
-                  <tr>
-                    <th class="text-center">Nombre</th>
-                    <th class="text-center">CURP</th>
-                    <th class="text-center">Correo Electrónico</th>
-                    <th class="text-center">Fecha de Nacimiento</th>
-                    <th class="text-center">Rol</th>
-                    <th class="text-center">Fecha de Creación</th>
-                    <th class="text-center">Evaluaciones Solicitadas</th>
-                    <th class="text-center">Acción</th>
-                  </tr>
+                    <tr>
+                      <th class="text-center">ID</th>
+                      <th class="text-center">Nombre</th>
+                      <th class="text-center">CURP</th>
+                      <th class="text-center">Correo Electrónico</th>
+                      <th class="text-center">Fecha de Nacimiento</th>
+                      <th class="text-center">Rol</th>
+                      <th class="text-center">Fecha de Creación</th>
+                      <th class="text-center">Evaluaciones Solicitadas</th>
+                      <th class="text-center">Acción</th>
+                    </tr>
                   </thead>
                   <tbody>
                   <% @users.each do |user| %>
-                    <tr class="fila" data-nombre="<%= user.nombre + " " + user.ap_paterno + " " + user.ap_materno %>" data-curp="<%= user.curp %>" data-mail="<%= user.email %>" data-rol="<%= user.role.descripcion %>">
+                    <tr>
+                      <td class="text-center"><%= user.id %></td>
                       <td><%= user.nombre_completo %></td>
                       <td><%= user.curp %></td>
                       <td><%= user.email %></td>
                       <td class="text-center"><%= user.fecha_nacimiento.strftime('%d/%m/%Y') %></td>
                       <td><%= user.role.nombre_descripcion %></td>
                       <td class="text-center"><%= user.created_at.strftime('%d/%m/%Y') %> <small><%= user.created_at.strftime('%I:%M:%S %p') %></small></td>
-                      <td class="text-center"><span class="badge badge-info"><%= user.requested_quizzes.count %></span></td>
-                      <td class="text-center">
                         <% if user.role.id != 1 %>
-                          <%= link_to edit_user_path(user.id) do %>
-                            <span class="btn btn-sm btn-warning" data-toggle="tooltip" data-placement="top" title="Editar Usuario"><i class="fa fa-pencil"></i></span>
-                          <% end %>
-                          <%= link_to destroy_user_path(user.id), method: :delete, data:{confirm: "Esta acción es irreversible, ¿Desea continuar?"} do %>
-                            <span class="btn btn-sm btn-danger" data-toggle="tooltip" data-placement="top" title="Eliminar Usuario"><i class="fa fa-trash"></i></span>
-                          <% end %>
-                      <%end %>
-                      </td>
+                          <td class="text-center"><span class="badge badge-info"><%= user.requested_quizzes.count %></span></td>
+                          <td class="text-center">
+                            <%= link_to edit_user_path(user.id) do %>
+                              <span class="btn btn-sm btn-warning" data-toggle="tooltip" data-placement="top" title="Editar"><i class="fa fa-pencil"></i></span>
+                            <% end %>
+                            <%= link_to destroy_user_path(user.id), method: :delete, data:{confirm: "Esta acción es irreversible, ¿Desea continuar?"} do %>
+                              <span class="btn btn-sm btn-danger" data-toggle="tooltip" data-placement="top" title="Eliminar"><i class="fa fa-trash"></i></span>
+                            <% end %>
+                          </td>
+                        <% else %>
+                        <td class="text-center">N/A</td>
+                        <td class="text-center"></td>
+                    <%end %>
                     </tr>
                   <% end %>
                   </tbody>
@@ -93,7 +98,10 @@
                 }
             },
             pageLength: 10,
-            responsive: true
+            responsive: true,
+            "columnDefs": [
+              { "width": "2%", "targets": 0 }
+            ]
         });
     });
 
