--- a/app/views/question_admin/new.html.erb
+++ b/app/views/question_admin/new.html.erb
@@ -7,7 +7,7 @@
           <% if @question.blank? %>
             <h5>Registrar Pregunta</h5>
           <% else %>
-            <h5>Editar Pregunta %></h5>
+            <h5>Editar Pregunta</h5>
           <% end %>
         </div>
         <div class="ibox-content">
