--- a/app/views/answer_admin/index.html.erb
+++ b/app/views/answer_admin/index.html.erb
@@ -16,39 +16,39 @@
           <div class="row">
             <div class="col-md-12">
               <div class="table-responsive">
-                <table class="table table-striped table-bordered">
+                <table class="table table-hover" width="100%">
                   <thead>
                   <tr>
-                    <th class="text-center">ID</th>
-                    <th class="text-center">Pregunta</th>
+                    <th class="text-left">ID</th>
+                    <th class="text-left">Pregunta</th>
                     <th class="text-center">Inciso</th>
-                    <th class="text-center">Respuesta</th>
+                    <th class="text-left">Respuesta</th>
                     <th class="text-center">¿Es Correcta?</th>
                     <th class="text-center">Acción</th>
                   </tr>
                   </thead>
                   <tbody>
-                  <% @answers.each do |answer| %>
-                    <tr>
-                      <td class="text-center"><%= answer.id %></td>
-                      <td class="text-justify"><%= answer.question.pregunta.truncate(100, omission: "...") %></td>
-                      <td class="text-center"><%= answer.inciso %></td>
-                      <td class="text-justify"><%= answer.respuesta %></td>
-                      <% if answer.correcta %>
-                        <td class="text-center">SI</td>
-                      <% else %>
-                        <td class="text-center">NO</td>
-                      <% end %>
-                      <td class="text-center">
-                        <%= link_to edit_answer_path(answer.id) do %>
-                          <span class="btn btn-sm btn-warning" data-toggle="tooltip" data-placement="top" title="Editar"><i class="fa fa-pencil"></i></span>
+                    <% @answers.each do |answer| %>
+                      <tr>
+                        <td class="text-left"><%= answer.id %></td>
+                        <td class="text-justify"><%= answer.question.pregunta.truncate(100, omission: "...") %></td>
+                        <td class="text-center"><%= answer.inciso %></td>
+                        <td class="text-justify"><%= answer.respuesta %></td>
+                        <% if answer.correcta %>
+                          <td class="text-center"><span class="label label-success">SI</span></td>
+                        <% else %>
+                          <td class="text-center"><span class="label label-danger">NO</span></td>
                         <% end %>
-                        <%= link_to destroy_answer_path(answer.id), method: :delete, data:{confirm: "Esta acción es irreversible, ¿Desea continuar?"} do %>
-                          <span class="btn btn-sm btn-danger" data-toggle="tooltip" data-placement="top" title="Eliminar"><i class="fa fa-trash"></i></span>
-                        <% end %>
-                      </td>
-                    </tr>
-                  <% end %>
+                        <td class="text-left">
+                          <%= link_to edit_answer_path(answer.id) do %>
+                            <span class="btn btn-sm btn-warning" data-toggle="tooltip" data-placement="top" title="Editar"><i class="fa fa-pencil"></i></span>
+                          <% end %>
+                          <%= link_to destroy_answer_path(answer.id), method: :delete, data:{confirm: "Esta acción es irreversible, ¿Desea continuar?"} do %>
+                            <span class="btn btn-sm btn-danger" data-toggle="tooltip" data-placement="top" title="Eliminar"><i class="fa fa-trash"></i></span>
+                          <% end %>
+                        </td>
+                      </tr>
+                    <% end %>
                   </tbody>
                 </table>
               </div>
@@ -64,38 +64,8 @@
   <script>
 
       $(function () {
-
-          $('.table').DataTable({
-              language:{
-                  "sProcessing":     "Procesando...",
-                  "sLengthMenu":     "Mostrar _MENU_ registros",
-                  "sZeroRecords":    "No se encontraron resultados",
-                  "sEmptyTable":     "Ningún dato disponible en esta tabla",
-                  "sInfo":           "Mostrando registros del _START_ al _END_ de un total de _TOTAL_ registros",
-                  "sInfoEmpty":      "Mostrando registros del 0 al 0 de un total de 0 registros",
-                  "sInfoFiltered":   "(filtrado de un total de _MAX_ registros)",
-                  "sInfoPostFix":    "",
-                  "sSearch":         "Buscar:",
-                  "sUrl":            "",
-                  "sInfoThousands":  ",",
-                  "sLoadingRecords": "Cargando...",
-                  "oPaginate": {
-                      "sFirst":    "Primero",
-                      "sLast":     "Último",
-                      "sNext":     "Siguiente",
-                      "sPrevious": "Anterior"
-                  },
-                  "oAria": {
-                      "sSortAscending":  ": Activar para ordenar la columna de manera ascendente",
-                      "sSortDescending": ": Activar para ordenar la columna de manera descendente"
-                  }
-              },
-              pageLength: 10,
-              responsive: true,
-              "columnDefs": [
-                  { "width": "2%", "targets": 0 }
-              ]
-          });
+          <%= render "js_partials/dataTable.js" %>
+          $.select2("select");
       });
 
   </script>
