--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -28,26 +28,47 @@
                 <% end %>
             </li>
 
-            <%# Modulo de administracion de usuarios para administradores %>
+            <%# Modulos de administradores %>
             <% if @current_user.role.id == 1 %>
               <li class="<%= 'active' if params[:admin_users_scope].eql? true %>">
                 <%= link_to user_admin_path do %>
                   <i class="fa fa-users"></i> <span class="nav-label">Usuarios</span>
                 <% end %>
               </li>
+
               <li class="<%= 'active' if params[:admin_quizzes_type_scope].eql? true %>">
                 <%= link_to quiz_type_admin_path do %>
                   <i class="fa fa-list-ol"></i> <span class="nav-label">Tipos de Evaluaciones Teóricas</span>
                 <% end %>
               </li>
+
               <li class="<%= 'active' if params[:admin_questions_scope].eql? true %>">
                 <%= link_to question_admin_path do %>
                   <i class="fa fa-question"></i> <span class="nav-label">Preguntas</span>
                 <% end %>
               </li>
+
               <li class="<%= 'active' if params[:admin_answers_scope].eql? true %>">
                 <%= link_to answer_admin_path do %>
                   <i class="fa fa-check"></i> <span class="nav-label">Respuestas</span>
+                <% end %>
+              </li>
+            <% end %>
+
+            <%# Modulos de evaluadores %>
+            <% if @current_user.role.id == 2 %>
+              <li class="<%= 'active' if params[:evaluaciones_teoricas_scope].eql? true %>">
+                <%= link_to quiz_eval_path do %>
+                  <i class="fa fa-list-ol"></i> <span class="nav-label">Evaluaciones Teóricas</span>
+                <% end %>
+              </li>
+            <% end %>
+
+            <%# Modulos de usuarios %>
+            <% if @current_user.role.id == 3 %>
+              <li class="<%= 'active' if params[:evaluaciones_teoricas_scope].eql? true %>">
+                <%= link_to quiz_user_path do %>
+                  <i class="fa fa-list-ol"></i> <span class="nav-label">Evaluaciones Teóricas</span>
                 <% end %>
               </li>
             <% end %>
