--- a/app/views/user_admin/index.html.erb
+++ b/app/views/user_admin/index.html.erb
@@ -16,46 +16,46 @@
           <div class="row">
             <div class="col-md-12">
               <div class="table-responsive">
-                <table class="table table-striped table-bordered">
+                <table class="table table-hover" width="100%">
                   <thead>
                     <tr>
-                      <th class="text-center">ID</th>
-                      <th class="text-center">Nombre</th>
-                      <th class="text-center">CURP</th>
-                      <th class="text-center">Correo Electrónico</th>
-                      <th class="text-center">Fecha de Nacimiento</th>
-                      <th class="text-center">Rol</th>
-                      <th class="text-center">Fecha de Creación</th>
+                      <th class="text-left">ID</th>
+                      <th class="text-left">Nombre</th>
+                      <th class="text-left">CURP</th>
+                      <th class="text-left">Correo Electrónico</th>
+                      <th class="text-left">Fecha de Nacimiento</th>
+                      <th class="text-left">Rol</th>
+                      <th class="text-left">Fecha de Creación</th>
                       <th class="text-center">Evaluaciones Solicitadas</th>
-                      <th class="text-center">Acción</th>
+                      <th class="text-left">Acción</th>
                     </tr>
                   </thead>
                   <tbody>
-                  <% @users.each do |user| %>
-                    <tr>
-                      <td class="text-center"><%= user.id %></td>
-                      <td><%= user.nombre_completo %></td>
-                      <td><%= user.curp %></td>
-                      <td><%= user.email %></td>
-                      <td class="text-center"><%= user.fecha_nacimiento.strftime('%d/%m/%Y') %></td>
-                      <td><%= user.role.nombre_descripcion %></td>
-                      <td class="text-center"><%= user.created_at.strftime('%d/%m/%Y') %> <small><%= user.created_at.strftime('%I:%M:%S %p') %></small></td>
-                        <% if user.role.id != 1 %>
-                          <td class="text-center"><span class="badge badge-info"><%= user.requested_quizzes.count %></span></td>
-                          <td class="text-center">
-                            <%= link_to edit_user_path(user.id) do %>
-                              <span class="btn btn-sm btn-warning" data-toggle="tooltip" data-placement="top" title="Editar"><i class="fa fa-pencil"></i></span>
-                            <% end %>
-                            <%= link_to destroy_user_path(user.id), method: :delete, data:{confirm: "Esta acción es irreversible, ¿Desea continuar?"} do %>
-                              <span class="btn btn-sm btn-danger" data-toggle="tooltip" data-placement="top" title="Eliminar"><i class="fa fa-trash"></i></span>
-                            <% end %>
-                          </td>
-                        <% else %>
-                        <td class="text-center">N/A</td>
-                        <td class="text-center"></td>
-                    <%end %>
-                    </tr>
-                  <% end %>
+                    <% @users.each do |user| %>
+                      <tr>
+                        <td class="text-left"><%= user.id %></td>
+                        <td><%= user.nombre_completo %></td>
+                        <td><%= user.curp %></td>
+                        <td><%= user.email %></td>
+                        <td class="text-left"><%= user.fecha_nacimiento.strftime('%d/%m/%Y') %></td>
+                        <td><%= user.role.nombre_descripcion %></td>
+                        <td class="text-left"><%= user.created_at.strftime('%d/%m/%Y') %> <small><%= user.created_at.strftime('%I:%M:%S %p') %></small></td>
+                          <% if user.role.id != 1 %>
+                            <td class="text-center"><span class="badge badge-info"><%= user.requested_quizzes.count %></span></td>
+                            <td class="text-center">
+                              <%= link_to edit_user_path(user.id) do %>
+                                <span class="btn btn-sm btn-warning" data-toggle="tooltip" data-placement="top" title="Editar"><i class="fa fa-pencil"></i></span>
+                              <% end %>
+                              <%= link_to destroy_user_path(user.id), method: :delete, data:{confirm: "Esta acción es irreversible, ¿Desea continuar?"} do %>
+                                <span class="btn btn-sm btn-danger" data-toggle="tooltip" data-placement="top" title="Eliminar"><i class="fa fa-trash"></i></span>
+                              <% end %>
+                            </td>
+                          <% else %>
+                          <td class="text-center">N/A</td>
+                          <td class="text-center"></td>
+                      <%end %>
+                      </tr>
+                    <% end %>
                   </tbody>
                 </table>
               </div>
@@ -71,38 +71,8 @@
   <script>
 
     $(function () {
-
-        $('.table').DataTable({
-            language:{
-                "sProcessing":     "Procesando...",
-                "sLengthMenu":     "Mostrar _MENU_ registros",
-                "sZeroRecords":    "No se encontraron resultados",
-                "sEmptyTable":     "Ningún dato disponible en esta tabla",
-                "sInfo":           "Mostrando registros del _START_ al _END_ de un total de _TOTAL_ registros",
-                "sInfoEmpty":      "Mostrando registros del 0 al 0 de un total de 0 registros",
-                "sInfoFiltered":   "(filtrado de un total de _MAX_ registros)",
-                "sInfoPostFix":    "",
-                "sSearch":         "Buscar:",
-                "sUrl":            "",
-                "sInfoThousands":  ",",
-                "sLoadingRecords": "Cargando...",
-                "oPaginate": {
-                    "sFirst":    "Primero",
-                    "sLast":     "Último",
-                    "sNext":     "Siguiente",
-                    "sPrevious": "Anterior"
-                },
-                "oAria": {
-                    "sSortAscending":  ": Activar para ordenar la columna de manera ascendente",
-                    "sSortDescending": ": Activar para ordenar la columna de manera descendente"
-                }
-            },
-            pageLength: 10,
-            responsive: true,
-            "columnDefs": [
-              { "width": "2%", "targets": 0 }
-            ]
-        });
+        <%= render "js_partials/dataTable.js" %>
+        $.select2("select");
     });
 
   </script>
