--- a/app/assets/stylesheets/base/custom.scss
+++ b/app/assets/stylesheets/base/custom.scss
@@ -20,3 +20,16 @@ body{
 .nav.navbar-right > li > a{
   color: #fff;
 }
+
+.btn-mg{
+  margin: 2px 0px;
+}
+
+.wizard > .content > .body label{
+  margin-bottom: 0px;
+}
+
+.pretty{
+  display: block;    
+  margin: 1em 0;
+}
