--- a/app/views/answer_admin/index.html.erb
+++ b/app/views/answer_admin/index.html.erb
@@ -41,10 +41,10 @@
                         <% end %>
                         <td class="text-left">
                           <%= link_to edit_answer_path(answer.id) do %>
-                            <span class="btn btn-sm btn-warning" data-toggle="tooltip" data-placement="top" title="Editar"><i class="fa fa-pencil"></i></span>
+                            <span class="btn btn-sm btn-mg btn-warning" data-toggle="tooltip" data-placement="top" title="Editar"><i class="fa fa-pencil"></i></span>
                           <% end %>
                           <%= link_to destroy_answer_path(answer.id), method: :delete, data:{confirm: "Esta acción es irreversible, ¿Desea continuar?"} do %>
-                            <span class="btn btn-sm btn-danger" data-toggle="tooltip" data-placement="top" title="Eliminar"><i class="fa fa-trash"></i></span>
+                            <span class="btn btn-sm btn-mg btn-danger" data-toggle="tooltip" data-placement="top" title="Eliminar"><i class="fa fa-trash"></i></span>
                           <% end %>
                         </td>
                       </tr>
